# gh-guard

./: Cargo.toml  IMPLEMENTATION.md  README.md  flake.nix  gh-guard.rb
.github/workflows/: ci.yml
config/: example.toml
scripts/: e2e_test.sh  smoke_test.sh
src/: command.rs  config.rs  download.rs  error.rs  exec.rs  gate.rs  gh_manager.rs  guard_commands.rs  lib.rs  logging.rs  main.rs  metadata.rs  paths.rs  policy.rs  redact.rs  state.rs
tests/: full_flow_tests.rs  integration_tests.rs
