[package]
name = "gh-guard"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gh"
path = "src/main.rs"

[dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json"] }
sha2 = "0.10"
hex = "0.4"
zip = "2"
tar = "0.4"
flate2 = "1"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
hostname = "0.4"
whoami = "1"
tempfile = "3"
fs4 = "0.12"
walkdir = "2"
libc = "0.2"
